<resources>
    <string name="app_name">MIEMCam</string>
    <string name="about_name">О приложении</string>
    <string name="title_control_panel">Управление</string>
    <string name="title_record">Запись</string>
    <string name="title_vmix">Vmix</string>
    <string name="start_record">Старт</string>
    <string name="stop_record">Стоп</string>
    <string name="source_camera">Камера</string>
    <string name="source_coder">Кодер</string>
    <string name="source">Источник звука:</string>
    <string name="preset_1">1</string>
    <string name="preset_2">2</string>
    <string name="preset_3">3</string>
    <string name="preset_4">4</string>
    <string name="preset_5">5</string>
    <string name="preset_6">6</string>
    <string name="preset_7">7</string>
    <string name="preset_8">8</string>
    <string name="preset_9">9</string>
    <string name="options">Настройки</string>
    <string name="about">О приложении</string>
    <string name="logout">Выйти</string>
    <string name="auto">A</string>
    <string name="semi">S</string>
    <string name="manual">M</string>
    <string name="login">Войти</string>
    <string name="login_hint">e-mail</string>
    <string name="password_hint">Пароль</string>
    <string name="token_key">token</string>
    <string name="vmix_overlay_1">1</string>
    <string name="vmix_overlay_2">2</string>
    <string name="vmix_overlay_3">3</string>
    <string name="vmix_overlay_4">4</string>
    <string name="vmix_cut">Cut</string>
    <string name="vmix_fade">Fade</string>
    <string name="vmix_rec">Rec</string>
    <string name="vmix_stream">Strm</string>
    <string name="vmix_stop">Stop</string>
    <string name="vmix_program">Prgr</string>
    <string name="vmix_preview">Prvw</string>
    <string name="begin">Начало:</string>
    <string name="end">Конец:</string>
    <string name="date">Дата:</string>
    <string name="defaultTime">00:00</string>
    <string name="create">Создать</string>
    <string name="about_text">Приложение позволяет удалённо управлять камерами в МИЭМ, делать запись с них, записывать сценарии и управлять VMIX.</string>
    <string name="autors">Куркин\u00A0Александр, Николенко\u00A0Михаил, Федоров\u00A0Тимоей, МИЭМ, 2020</string>
</resources>
