<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingTop="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">
        <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:layout_marginEnd="16dp"
                android:textAlignment="viewEnd"
                android:maxLines="1"
                android:ellipsize="end"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/colorAccent"
                android:text="@string/begin"/>

        <TextView
                android:id="@+id/startTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:text="@string/defaultTime"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="16dp"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/colorAccent"
                android:text="@string/end"/>

        <TextView
                android:id="@+id/stopTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:text="@string/defaultTime"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="16dp"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/colorAccent"
                android:text="@string/date"/>

        <TextView
                android:id="@+id/dateTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/create"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/create"
            android:textColor="@color/colorPrimary"
            app:strokeColor="@color/colorPrimary" />


</LinearLayout>
